--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ annotated-types==0.7.0
 asgiref==3.11.0
 attrs==25.4.0
 certifi==2025.11.12
+click==8.3.1
 Django==5.2.8
 frozenlist==1.8.0
+h11==0.16.0
 idna==3.11
 magic-filter==1.0.12
 multidict==6.7.0
@@ -19,4 +21,5 @@ python-dotenv==1.2.1
 sqlparse==0.5.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+uvicorn==0.38.0
 yarl==1.22.0
